--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,1 +1,3 @@
 <h1>welcome to Bookers !!</h1>
+<%= link_to "Log in", new_user_session_path %><br>
+<%= link_to "Sign Up", new_user_registration_path %>
