--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,10 @@
 <h1>User info</h1>
-<p>name  <%= @user.name %></p>
 
+<h3>name</h3>
+<%= @user.name %>
+<h3>introduction</h3>
+<%= @user.introduction %>
+
+<% if @user.id == current_user.id %>
+  <p><%= link_to "編集", edit_user_path(@user) %></p>
+<% end %>
