--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,6 @@
 <h1>User info</h1>
 
+<%= attachment_image_tag @user, :profile_image, :fill, 60, 60, format: 'jpeg' %>
 <h3>name</h3>
 <%= @user.name %>
 <h3>introduction</h3>
