--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,10 +3,9 @@
   <h2>Name</h2>
   <%= f.text_field :name, autofocus: true %>
   <h2>Image</h2>
-  <%= attachment_image_tag @user, :profile_image, :fill, 60, 60 %>
   <%= f.attachment_field :profile_image %>
   <h2>Introduction</h2>
-  <%= f.text_field :introduction, autofocus: :true %>
+  <%= f.text_field :introduction, autofocus: :true %><br />
 
   <%= f.submit "Update User" %>
 
