--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,3 +5,26 @@
   <%= attachment_image_tag user,:profile_image, :fill, 60, 60, format: 'jpg' %>
   <%= user.name %>
 <% end %>
+
+<h1>User info</h1>
+
+<%= attachment_image_tag @user, :profile_image, :fill, 60, 60, format: 'jpeg' %>
+<h3>name</h3>
+<%= @user.name %>
+<h3>introduction</h3>
+<%= @user.introduction %>
+
+<% if @user.id == current_user.id %>
+  <p><%= link_to "編集", edit_user_path(@user) %></p>
+<% end %>
+
+<h1>New book</h1>
+<%= form_for(@book) do |f| %>
+  <p>Title</p>
+  <%= f.text_field :title %>
+
+  <p>Opinion</p>
+  <%= f.text_field :body %>
+
+  <%= f.submit 'Create Book' %>
+<% end %>
