--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
           <%= link_to "Home", user_path(current_user.id) %>
         </li>
         <li>
-          <%= link_to "User", "#" %>
+          <%= link_to "User", users_path %>
         </li>
         <li>
           <%= link_to "Books", books_path %>
