--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -4,7 +4,7 @@
 <%= @book.body %>
 
 <%= link_to 'Edit', edit_book_path(@book.id) %>
-
+<%= link_to 'Destroy', book_path(@book.id), method: :delete, "data-confirm"=>"本当に消しますか？" %>
 
 <h1>User info</h1>
 
