--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,6 +4,8 @@
 <% @users.each do |user| %>
   <%= attachment_image_tag user,:profile_image, :fill, 60, 60, format: 'jpg' %>
   <%= user.name %>
+
+  <%= link_to 'show', user_path(@user.id) %>
 <% end %>
 
 <h1>User info</h1>
