--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,3 +9,25 @@
 <% if @user.id == current_user.id %>
   <p><%= link_to "編集", edit_user_path(@user) %></p>
 <% end %>
+
+<h1>New book</h1>
+<%= form_for(@book) do |f| %>
+  <p>Title</p>
+  <%= f.text_field :title %>
+
+  <p>Opinion</p>
+  <%= f.text_field :body %>
+
+  <%= f.submit 'Create Book' %>
+<% end %>
+
+<h1>Books</h1>
+
+<p>Titl</p>
+<p>Opinion</p>
+
+<%= @books.each do |book| %>
+  <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, format: 'jpeg' %>
+  <%= book.title %>
+  <%= book.body %>
+<% end %>
