[Update]headerレイアウト

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,35 +10,44 @@
   </head>
 
   <body>
-    <ul>
-      <% if user_signed_in? %>
-        <li>
-          <%= link_to "Home", user_path(current_user.id) %>
-        </li>
-        <li>
-          <%= link_to "User", users_path %>
-        </li>
-        <li>
-          <%= link_to "Books", books_path %>
-        </li>
-        <li>
-          <%= link_to "logout", destroy_user_session_path, method: :delete %>
-        </li>
-      <% else %>
-        <li>
-          <%= link_to "Home", top_path %>
-        </li>
-        <li>
-          <%= link_to "About", "#" %>
-        </li>
-        <li>
-          <%= link_to "sign up", new_user_registration_path %>
-        </li>
-        <li>
-          <%= link_to "login", user_session_path %>
-        </li>
-      <% end %>
-    </ul>
+    <header class="navbar navbar-fixed-top navbar-inverse">
+      <div class="container">
+        <nav class="nav navbar-nav navbar-left">
+          <span>Bookers</span>
+        </nav>
+        <nav>
+          <ul class="nav navbar-nav navbar-right">
+            <% if user_signed_in? %>
+              <li>
+                <a class="glyphicon glyphicon-home home"><%= link_to "Home", user_path(current_user.id) %></a>
+              </li>
+              <li>
+                <a class="glyphicon glyphicon-user users"><%= link_to "User", users_path %></a>
+              </li>
+              <li>
+                <a class="glyphicon glyphicon-book books"><%= link_to "Books", books_path %></a>
+              </li>
+              <li>
+                <a class="glyphicon glyphicon-log-out logout"><%= link_to "logout", destroy_user_session_path, method: :delete %></a>
+              </li>
+            <% else %>
+              <li>
+                <a class="glyphicon glyphicon-home home"><%= link_to "Home", top_path %></a>
+              </li>
+              <li>
+                <a class="glyphicon glyphicon-link about"><%= link_to "About", "#" %></a>
+              </li>
+              <li>
+                <a class="glyphicon glyphicon-log-in sign_in"><%= link_to "sign up", new_user_registration_path %>
+              </li>
+              <li>
+                <a class="glyphicon glyphicon-log-in sign_in"><%= link_to "login", user_session_path %></a>
+              </li>
+            <% end %>
+          </ul>
+        </nav>
+      </div>
+    </header>
     <%= yield %>
   </body>
 </html>
