--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,3 +1,5 @@
+<table class="table table-striped">
 <h1>welcome to Bookers !!</h1>
-<%= link_to "Log in", new_user_session_path %><br>
-<%= link_to "Sign Up", new_user_registration_path %>
+<%= link_to "Log in", new_user_session_path, class: "btn btn-default" %><br>
+<%= link_to "Sign Up", new_user_registration_path, class: "btn btn-default" %>
+</table>
