--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,32 +1,75 @@
-<h1>User info</h1>
+<div class="body">
+  <div class="container">
+  	<div class="row">
+  	  <div class="col-xs-3">
+        <h2>User info</h2>
 
-<%= attachment_image_tag @user, :profile_image, :fill, 60, 60, format: 'jpeg' %>
-<h3>name</h3>
-<%= @user.name %>
-<h3>introduction</h3>
-<%= @user.introduction %>
+        <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, format: 'jpeg' %>
+        <table class="table">
+          <tbody>
+          	<tr></tr>
+          	<tr>
+          	  <th>name</th>
+              <th><%= @user.name %></th>
+            </tr>
+            <tr>
+              <th>introduction</th>
+              <th><%= @user.introduction %></th>
+            </tr>
+          </tbody>
+        </table>
 
-<% if @user.id == current_user.id %>
-  <p><%= link_to "編集", edit_user_path(@user) %></p>
-<% end %>
+        <div class="row">
+          <% if @user.id == current_user.id %>
+            <%= link_to "", edit_user_path(@user), class: 'col-xs-12 btn btn-default glyphicon glyphicon-wrench' %>
+          <% end %>
+        </div>
 
-<h1>Books</h1>
-<p>Title</p>
-<p>Opinion</p>
-<% @books.each do |book| %>
-  <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, format: 'jpeg' %>
-  <%= book.title %>
-  <%= book.body %>
-<% end %>
+        <h2>New book</h2>
+        <%= form_for(@book) do |f| %>
+          <div class="field row">
+          	<label for="book_title">Title</label>
+            <%= f.text_field :title %>
+          </div>
+
+          <div class="field row">
+          	<label for="book_opinion">Opinion</label>
+            <%= f.text_field :body %>
+          </div>
+
+          <div class="actions row">
+          	<%= f.submit 'Create Book', class: 'btn btn-primary col-xs-12' %>
+          </div>
+        <% end %>
+      </div>
+
+      <div class="col-xs-9">
+      	<h1>Books</h1>
+
+        <table class="table table-hover table-inverse">
+          <thead>
+          	<tr>
+          	  <th></th>
+              <th>Titl</th>
+              <th>Opinion</th>
+              <th colspan="3"></th>
+            </tr>
+          </thead>
+
+          <tbody>
+          <% @books.each do |book| %>
+            <tr>
+          	  <td><%= attachment_image_tag @user, :profile_image, :fill, 60, 60, format: 'jpeg' %></td>
+              <td><%= link_to book.title, book_path(book.id) %></td>
+              <td><%= book.body %></td>
+            </tr>
+          <% end %>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
 
 
-<h1>New book</h1>
-<%= form_for(@book) do |f| %>
-  <p>Title</p>
-  <%= f.text_field :title %>
 
-  <p>Opinion</p>
-  <%= f.text_field :body %>
-
-  <%= f.submit 'Create Book' %>
-<% end %>
