--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,32 +1,75 @@
-<h1>Users</h1>
-<p>image</p>
-<p>name</p>
-<% @users.each do |user| %>
-  <%= attachment_image_tag user,:profile_image, :fill, 60, 60, format: 'jpg' %>
-  <%= user.name %>
+<div class="body">
+  <div class="container">
+  	<div class="row">
+  	  <div class="col-xs-3">
+        <h2>User info</h2>
 
-  <%= link_to 'show', user_path(@user.id) %>
-<% end %>
+        <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, format: 'jpeg' %>
+        <table class="table">
+          <tbody>
+          	<tr></tr>
+          	<tr>
+          	  <th>name</th>
+              <th><%= @user.name %></th>
+            </tr>
+            <tr>
+              <th>introduction</th>
+              <th><%= @user.introduction %></th>
+            </tr>
+          </tbody>
+         </table>
 
-<h1>User info</h1>
+        <div class="row">
+          <% if @user.id == current_user.id %>
+            <%= link_to "", edit_user_path(@user), class: 'col-xs-12 btn btn-default glyphicon glyphicon-wrench' %>
+          <% end %>
+        </div>
 
-<%= attachment_image_tag @user, :profile_image, :fill, 60, 60, format: 'jpeg' %>
-<h3>name</h3>
-<%= @user.name %>
-<h3>introduction</h3>
-<%= @user.introduction %>
+        <h2>New book</h2>
+        <%= form_for(@book) do |f| %>
+          <div class="field row">
+          	<label for="book_title">Title</label>
+            <%= f.text_field :title %>
+          </div>
 
-<% if @user.id == current_user.id %>
-  <p><%= link_to "編集", edit_user_path(@user) %></p>
-<% end %>
+          <div class="field row">
+          	<label>Opinion</label>
+            <%= f.text_field :body %>
+          </div>
 
-<h1>New book</h1>
-<%= form_for(@book) do |f| %>
-  <p>Title</p>
-  <%= f.text_field :title %>
+          <div class="actions row">
+          	<%= f.submit 'Create Book', class: 'btn btn-primary col-xs-12' %>
+          </div>
+        <% end %>
+      </div>
 
-  <p>Opinion</p>
-  <%= f.text_field :body %>
+      <div class="col-xs-9">
+      	<h1>Users</h1>
 
-  <%= f.submit 'Create Book' %>
-<% end %>
+        <table class="table">
+          <thead>
+          	<tr>
+              <th>image</th>
+              <th>name</th>
+            </tr>
+          </thead>
+
+          <tbody>
+          	<td>
+          <% @users.each do |user| %>
+              <%= attachment_image_tag user,:profile_image, :fill, 60, 60, format: 'jpg' %>
+            </td>
+            <td>
+              <%= user.name %>
+            </td>
+            <td>
+              <%= link_to 'show', user_path(@user.id) %>
+            </td>
+          <% end %>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
+
+
