--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,10 +1,24 @@
-<h1>Editing Book</h1>
+<div class="body">
+  <div class="container">
+  	<div class="row">
+  	  <div class="col-md-6 col-md-offset-3">
+  	  	<h1>Editing Book</h1>
 
-<%= form_for(@book) do |f| %>
-  <p>Title</p>
-  <%= f.text_field :title %>
-  <p>Opinion</p>
-  <%= f.text_area :body %>
+        <%= form_for(@book) do |f| %>
+          <div class="field row">
+            <label for="book_title">Title</label>
+            <%= f.text_field :title, class: 'col-xs-12' %>
+          </div>
+          <div class="field row">
+            <label for="book_opinion">Opinion</label>
+            <%= f.text_area :body, class: 'col-xs-12' %>
+          </div>
 
-  <%= f.submit 'Update Book' %>
-<% end %>
+          <div class="actions row">
+            <%= f.submit 'Update Book', class: 'btn btn-primary col-xs-12' %>
+          </div>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
