--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,26 +1,78 @@
-<h1>Book detail</h1>
-<%= attachment_image_tag @user, :profile_image, :fill, 60, 60, format: 'jpeg' %>
-<%= @book.title %>
-<%= @book.body %>
+<div class="body">
+  <div class="container">
+  	<div class="row">
+  	  <div class="col-xs-3">
+        <h2>User info</h2>
 
-<%= link_to 'Edit', edit_book_path(@book.id) %>
-<%= link_to 'Destroy', book_path(@book.id), method: :delete, "data-confirm"=>"本当に消しますか？" %>
+        <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, format: 'jpeg' %>
+        <table class="table">
+          <tbody>
+          	<tr></tr>
+          	<tr>
+          	  <th>name</th>
+              <th><%= @user.name %></th>
+            </tr>
+            <tr>
+              <th>introduction</th>
+              <th><%= @user.introduction %></th>
+            </tr>
+          </tbody>
+        </table>
 
-<h1>User info</h1>
+        <div class="row">
+          <% if @user.id == current_user.id %>
+            <%= link_to "", edit_user_path(@user), class: 'col-xs-12 btn btn-default glyphicon glyphicon-wrench' %>
+          <% end %>
+        </div>
 
-<%= attachment_image_tag @user, :profile_image, :fill, 60, 60, format: 'jpeg' %>
-<h3>name</h3>
-<%= @user.name %>
-<h3>introduction</h3>
-<%= @user.introduction %>
+        <h2>New book</h2>
+        <%= form_for(@book) do |f| %>
+          <div class="field row">
+          	<label for="book_title">Title</label>
+            <%= f.text_field :title %>
+          </div>
 
-<h1>New book</h1>
-<%= form_for(@book) do |f| %>
-  <p>Title</p>
-  <%= f.text_field :title %>
+          <div class="field row">
+          	<label for="book_opinion">Opinion</label>
+            <%= f.text_field :body %>
+          </div>
 
-  <p>Opinion</p>
-  <%= f.text_field :body %>
+          <div class="actions row">
+          	<%= f.submit 'Create Book', class: 'btn btn-primary col-xs-12' %>
+          </div>
+        <% end %>
+      </div>
 
-  <%= f.submit 'Create Book' %>
-<% end %>
+      <div class="col-xs-9">
+      	<h1>Book detai</h1>
+
+        <table class="table">
+          <thead>
+          	<tr>
+          	  <th></th>
+              <th>Titl</th>
+              <th>Opinion</th>
+              <th colspan="3"></th>
+            </tr>
+          </thead>
+
+          <tbody>
+            <tr>
+          	  <td><%= attachment_image_tag @user, :profile_image, :fill, 60, 60, format: 'jpeg' %></td>
+              <td><%= @book.title %></td>
+              <td><%= @book.body %></td>
+              <td><%= link_to 'Edit', edit_book_path(@book.id), class: 'btn-sm btn-success' %></td>
+              <td><%= link_to 'Destroy', book_path(@book.id), method: :delete, "data-confirm"=>"本当に消しますか？", class: 'btn-sm btn-danger' %></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
