--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,6 +17,7 @@
               <th><%= @user.introduction %></th>
             </tr>
           </tbody>
+        </table>
 
         <div class="row">
           <% if @user.id == current_user.id %>
@@ -32,7 +33,7 @@
           </div>
 
           <div class="field row">
-          	<label>Opinion</label>
+          	<label for="book_opinion">Opinion</label>
             <%= f.text_field :body %>
           </div>
 
@@ -51,23 +52,24 @@
           	  <th></th>
               <th>Titl</th>
               <th>Opinion</th>
+              <th colspan="3"></th>
             </tr>
           </thead>
 
           <tbody>
-          	<td>
-          <%= @books.each do |book| %>
-              <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, format: 'jpeg' %>
-            </td>
-            <td>
-              <%= book.title %>
-            </td>
-            <td>
-              <%= book.body %>
-            </td>
+          <% @books.each do |book| %>
+            <tr>
+          	  <td><%= attachment_image_tag @user, :profile_image, :fill, 60, 60, format: 'jpeg' %></td>
+              <td><%= link_to book.title, book_path(book.id) %></td>
+              <td><%= book.body %></td>
+            </tr>
           <% end %>
+          </tbody>
         </table>
       </div>
     </div>
   </div>
 </div>
+
+
+
