--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
                <%= link_to "Home", root_path, class: 'glyphicon glyphicon-home home' %>
               </li>
               <li>
-                <%= link_to "About", "#", class: 'glyphicon glyphicon-link about' %>
+                <%= link_to "About", about_path, class: 'glyphicon glyphicon-link about' %>
               </li>
               <li>
                 <%= link_to "sign up", new_user_registration_path, class: 'glyphicon glyphicon-log-in sign_in' %>
