--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -44,7 +44,7 @@
       </div>
 
       <div class="col-xs-9">
-      	<h1>Books</h1>
+      	<h2>Books</h2>
 
         <table class="table table-hover table-inverse">
           <thead>
@@ -52,6 +52,7 @@
           	  <th></th>
               <th>Titl</th>
               <th>Opinion</th>
+              <th colspan="3"></th>
             </tr>
           </thead>
 
@@ -69,6 +70,16 @@
     </div>
   </div>
 </div>
+
+<footer>
+  <div class="container">
+  	<div class="row">
+  	  <div class="col-xs-3 col-xs-offset-9">
+  	  	<p>CopyRight Infratop.inc</p>
+  	  </div>
+  	</div>
+  </div>
+</footer>
 
 
 
