--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,6 +2,18 @@
   <div class="container">
   	<div class="row">
   	  <div class="col-xs-3">
+        <% if @book.errors.any? %>
+          <div id="error_explanation" class="alert alert-danger">
+
+            <h2><%= pluralize(@book.errors.count, "error") %> prohibited this book from being saved:</h2>
+
+              <ul>
+                <% @book.errors.full_messages.each do |message| %>
+                  <li><%= message %></li>
+                <% end %>
+              </ul>
+          </div>
+        <% end %>
         <h2>User info</h2>
 
         <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, format: 'jpeg' %>
