--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,12 +1,27 @@
-<h1>User info</h1>
-<%= form_for(@user) do |f| %>
-  <h2>Name</h2>
-  <%= f.text_field :name, autofocus: true %>
-  <h2>Image</h2>
-  <%= f.attachment_field :profile_image %>
-  <h2>Introduction</h2>
-  <%= f.text_field :introduction, autofocus: :true %><br />
+<div class="body">
+  <div class="container">
+  	<p class="notice"></p>
+  	<h2>User info</h2>
+    <%= form_for(@user) do |f| %>
+    <div class="field">
+      <label for="user_name">Name</label>
+      <%= f.text_field :name, autofocus: true %>
+    </div>
 
-  <%= f.submit "Update User" %>
+    <div class="field">
+      <label for="user_image">Image</label>
+      <%= f.attachment_field :profile_image %>
+    </div>
 
-<% end %>
+    <div class="field">
+      <label for="user_introduction">Introduction</label>
+      <%= f.text_area :introduction, autofocus: :true %>
+    </div>
+
+    <div class="actions">
+      <%= f.submit "Update User" %>
+    </div>
+
+    <% end %>
+  </div>
+</div>
