--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -4,7 +4,7 @@
   	  <div class="col-xs-3">
         <h2>User info</h2>
 
-        <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, format: 'jpeg' %>
+        <%= attachment_image_tag @user, :profile_image, format: 'jpeg',size:"60x60", fallback: "no_image.jpg" %>
         <table class="table">
           <tbody>
           	<tr></tr>
@@ -29,12 +29,12 @@
         <%= form_for(@book) do |f| %>
           <div class="field row">
           	<label for="book_title">Title</label>
-            <%= f.text_field :title %>
+            <%= f.text_field :title, class: 'col-xs-12' %>
           </div>
 
           <div class="field row">
           	<label for="book_opinion">Opinion</label>
-            <%= f.text_field :body %>
+            <%= f.text_area :body, class: 'col-xs-12' %>
           </div>
 
           <div class="actions row">
@@ -59,13 +59,13 @@
           <tbody>
             <tr>
             <% if @user == current_user %>
-          	  <td><%= attachment_image_tag @user, :profile_image, :fill, 60, 60, format: 'jpeg' %></td>
+          	  <td><%= attachment_image_tag @user, :profile_image, format: 'jpeg',size:"60x60", fallback: "no_image.jpg" %></td>
               <td><%= @book.title %></td>
               <td><%= @book.body %></td>
               <td><%= link_to 'Edit', edit_book_path(@book.id), class: 'btn-sm btn-success' %></td>
               <td><%= link_to 'Destroy', book_path(@book.id), method: :delete, "data-confirm"=>"本当に消しますか？", class: 'btn-sm btn-danger' %></td>
               <% else %>
-              <td><%= attachment_image_tag @user, :profile_image, :fill, 60, 60, format: 'jpeg' %></td>
+              <td><%= attachment_image_tag @user, :profile_image, format: 'jpeg',size:"60x60", fallback: "no_image.jpg" %></td>
               <td><%= @book.title %></td>
               <td><%= @book.body %></td>
              <% end %>
