--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,7 +4,7 @@
   	  <div class="col-xs-3">
         <h2>User info</h2>
 
-        <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, format: 'jpeg' %>
+        <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, format: 'jpeg', fallback: "no_image.jpg"%>
         <table class="table">
           <tbody>
           	<tr></tr>
@@ -29,12 +29,12 @@
         <%= form_for(@book) do |f| %>
           <div class="field row">
           	<label for="book_title">Title</label>
-            <%= f.text_field :title %>
+            <%= f.text_field :title, class: 'col-xs-12' %>
           </div>
 
           <div class="field row">
           	<label>Opinion</label>
-            <%= f.text_field :body %>
+            <%= f.text_area :body, class: 'col-xs-12' %>
           </div>
 
           <div class="actions row">
@@ -58,7 +58,7 @@
           <% @users.each do |user| %>
             <tr>
           	  <td>
-                <%= attachment_image_tag user,:profile_image, :fill, 60, 60, format: 'jpg' %>
+                <%= attachment_image_tag user, :profile_image, format: 'jpeg',size:"60x60", fallback: "no_image.jpg" %>
               </td>
               <td>
                 <%= user.name %>
