--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,7 @@
   	  <div class="col-xs-3">
         <h2>User info</h2>
 
-        <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, format: 'jpeg' %>
+        <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, format: 'jpeg', fallback: "no_image.jpg"%>
         <table class="table">
           <tbody>
           	<tr></tr>
@@ -27,12 +27,12 @@
         <%= form_for(@book) do |f| %>
           <div class="field row">
           	<label for="book_title">Title</label>
-            <%= f.text_field :title %>
+            <%= f.text_field :title, class: 'col-xs-12' %>
           </div>
 
           <div class="field row">
           	<label for="book_opinion">Opinion</label>
-            <%= f.text_field :body %>
+            <%= f.text_area :body, class: 'col-xs-12' %>
           </div>
 
           <div class="actions row">
@@ -57,7 +57,7 @@
           <tbody>
           <% @books.each do |book| %>
             <tr>
-          	  <td><%= attachment_image_tag @user, :profile_image, :fill, 60, 60, format: 'jpeg' %></td>
+          	  <td><%= attachment_image_tag book.user, :profile_image, format: 'jpeg',size:"60x60", fallback: "no_image.jpg" %></td>
               <td><%= link_to book.title, book_path(book.id) %></td>
               <td><%= book.body %></td>
             </tr>
