--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,7 @@
 <div class="body">
   <div class="container">
+  	<p id="notice"></p>
+  	<p><%= flash[:notice] %></p>
   	<div class="row">
   	  <div class="col-xs-3">
         <h2>User info</h2>
