[Update]flash設置,User info画像サイズ変更

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,10 +1,12 @@
 <div class="body">
   <div class="container">
+  	<p id="notice"></p>
+  	<p><%= flash[:notice] %></p>
   	<div class="row">
   	  <div class="col-xs-3">
         <h2>User info</h2>
 
-        <%= attachment_image_tag @user, :profile_image, format: 'jpeg',size:"60x60", fallback: "no_image.jpg" %>
+        <%= attachment_image_tag @user, :profile_image, format: 'jpeg',size:"100x100", fallback: "no_image.jpg" %>
         <table class="table">
           <tbody>
           	<tr></tr>
