--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -4,6 +4,18 @@
   	  <div class="col-md-6 col-md-offset-3">
   	  	<h1>Editing Book</h1>
 
+        <div id="error_explanation">
+        <% if @book.errors.any? %>
+          <h3><%= pluralize(@book.errors.count, "error") %>prohibited this obj from being saved:</h3>
+
+          <ul>
+            <% @book.errors.full_messages.each do |message| %>
+              <li><%= message %></li>
+            <% end %>
+          </ul>
+        <% end %>
+        </div>
+
         <%= form_for(@book) do |f| %>
           <div class="field row">
             <label for="book_title">Title</label>
@@ -18,6 +30,8 @@
             <%= f.submit 'Update Book', class: 'btn btn-primary col-xs-12' %>
           </div>
         <% end %>
+        <%= link_to "Show", book_path(@book.id) %> |
+        <%= link_to "Back", books_path(@books), class: 'back' %>
       </div>
     </div>
   </div>
