--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -62,7 +62,7 @@
           <thead>
           	<tr>
           	  <th></th>
-              <th>Titl</th>
+              <th>Title</th>
               <th>Opinion</th>
               <th colspan="3"></th>
             </tr>
@@ -71,7 +71,11 @@
           <tbody>
           <% @books.each do |book| %>
             <tr>
-          	  <td><%= attachment_image_tag book.user, :profile_image, format: 'jpeg',size:"60x60", fallback: "no_image.jpg" %></td>
+          	  <td>
+                <%= link_to user_path(book.user) do %>
+                  <%= attachment_image_tag book.user, :profile_image, format: 'jpeg',size:"40x40", fallback: "no_image.jpg" %>
+                <% end %>
+              </td>
               <td><%= link_to book.title, book_path(book.id) %></td>
               <td><%= book.body %></td>
             </tr>
