--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -44,29 +44,28 @@
       </div>
 
       <div class="col-xs-9">
-      	<h1>Book detai</h1>
+      	<h2>Book detail</h2>
 
         <table class="table">
-          <thead>
-          	<tr>
-          	  <th></th>
-              <th>Titl</th>
-              <th>Opinion</th>
-              <th colspan="3"></th>
-            </tr>
-          </thead>
-
           <tbody>
             <tr>
             <% if @user == current_user %>
-          	  <td><%= attachment_image_tag @user, :profile_image, format: 'jpeg',size:"60x60", fallback: "no_image.jpg" %></td>
+          	  <td>
+          	    <%= link_to user_path(@user.id) do %>
+          	  	  <%= attachment_image_tag @user, :profile_image, format: 'jpeg',size:"40x40", fallback: "no_image.jpg" %><br><%= @user.name %>
+          	  	<% end %>
+          	  </td>
               <td><%= @book.title %></td>
               <td><%= @book.body %></td>
               <td><%= link_to 'Edit', edit_book_path(@book.id), class: 'btn-sm btn-success' %></td>
               <td><%= link_to 'Destroy', book_path(@book.id), method: :delete, "data-confirm"=>"本当に消しますか？", class: 'btn-sm btn-danger' %></td>
               <% else %>
-              <td><%= attachment_image_tag @user, :profile_image, format: 'jpeg',size:"60x60", fallback: "no_image.jpg" %></td>
-              <td><%= @book.title %></td>
+              <td>
+              	<%= link_to user_path(@user.id) do %>
+              	  <%= attachment_image_tag @user, :profile_image, format: 'jpeg',size:"40x40", fallback: "no_image.jpg" %><br><%= @user.name %>
+              	<% end %>
+              </td>
+              <td><%= link_to @book.title, book_path(@book.id) %></td>
               <td><%= @book.body %></td>
              <% end %>
             </tr>
