--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,5 +1,6 @@
 <div class="body">
   <div class="container">
+  	<p><%= flash[:notice] %></p>
   	<div class="row">
   	  <div class="top-message col-md-offset-3 col-md-6">
   	  	<h1>
